<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_size_16x"
    tools:context=".ask_help.presentation.AskHelpFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_size_16x"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_1x"
            android:layout_marginTop="@dimen/margin_size_16x"
            android:text="@string/edit_text_label_title_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24x"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/fragment_ask_help_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_label_title_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_1x"
            android:layout_marginTop="@dimen/margin_size_16x"
            android:text="@string/edit_text_label_title_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24x"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/fragment_ask_help_desc_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_desc"
            android:inputType="textMultiLine"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_1x"
            android:layout_marginTop="@dimen/margin_size_16x"
            android:text="@string/edit_text_label_title_price"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24x"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/fragment_ask_help_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_price"
            android:inputType="number"
            />

    </LinearLayout>

    <Button
        android:id="@+id/fragment_ask_help_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_button"
        android:text="@string/button_create"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18x"
        />

    <ProgressBar
        android:id="@+id/fragment_ask_help_progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</LinearLayout>