<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home_helping_me_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_size_8x"
    android:layout_marginTop="@dimen/margin_size_8x"
    android:layout_marginEnd="@dimen/margin_size_8x"
    android:background="@drawable/bg_yellow_card"
    android:padding="@dimen/padding_size_16x"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person_help_me_item_user_photo_image_view"
        android:layout_width="@dimen/person_card_photo_size"
        android:layout_height="@dimen/person_card_photo_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/person_help_me_item_user_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_16x"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/person_help_me_item_user_photo_image_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Person is helping you"
        />

    <TextView
        android:id="@+id/person_help_me_item_help_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_16x"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16x"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/person_help_me_item_user_photo_image_view"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_user_name_text_view"
        tools:text="Shop Order"
        />

    <TextView
        android:id="@+id/person_help_me_item_transmission_letter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16x"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_user_photo_image_view"
        tools:text="I will help you"
        />

    <Button
        android:id="@+id/person_help_me_item_refuse_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_10x"
        android:text="@string/button_refuse"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/person_help_me_item_approve_button"
        app:layout_constraintStart_toStartOf="@id/person_help_me_item_user_photo_image_view"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_transmission_letter"
        />

    <Button
        android:id="@+id/person_help_me_item_approve_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_10x"
        android:layout_marginTop="@dimen/margin_size_10x"
        android:text="@string/button_approve"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/person_help_me_item_refuse_button"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_transmission_letter"
        />

    <Button
        android:id="@+id/person_help_me_item_done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_10x"
        android:layout_marginTop="@dimen/margin_size_10x"
        android:text="@string/button_done"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/person_help_me_item_refuse_button"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_transmission_letter"
        />

    <TextView
        android:id="@+id/person_help_me_item_refused_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_size_16x"
        android:text="@string/text_view_refused"
        android:textSize="@dimen/text_size_18x"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_help_me_item_refuse_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>